# ml-python-base

./: .env.example  .mcp.example.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LOCAL_AGENT.md  Makefile  OPENCODE.md  README.md  opencode.json  pyproject.toml  skills-lock.json
.agents/rules/: GEMINI.md
.agents/skills/: .generated-manifest.tsv
.agents/skills/brainstorm_quick/: SKILL.md
.agents/skills/create_domain_contract/: SKILL.md
.agents/skills/plan_and_execute_feature/: SKILL.md
.agents/skills/source-command-retro/: SKILL.md
.agents/skills/source-command-verify/: SKILL.md
.agents/skills/systematic_debugging/: SKILL.md
.claude/: settings.json
.claude/agents/: documenter.md  implementer.md  orchestrator.md  planner.md  reviewer.md  tester.md
.claude/commands/: README.md  adr.md  orchestrate.md  plan.md  retro.md  toolbelt.md  verify.md
.claude/hooks/: session_start.sh  stop_nudge.sh
.claude/skills/brainstorming/: visual-companion.md
.claude/skills/create_domain_contract/: SKILL.md
.claude/skills/requesting-code-review/: code-reviewer.md
.claude/skills/subagent-driven-development/: code-quality-reviewer-prompt.md
.claude/skills/test-driven-development/: testing-anti-patterns.md
.claude/skills/using-git-worktrees/: SKILL.md
.claude/skills/writing-plans/: plan-document-reviewer-prompt.md
.codex/: config.toml  hooks.json
.codex/agents/: documenter.toml  implementer.toml  orchestrator.toml  planner.toml  reviewer.toml  tester.toml
.codex/skills/bootstrap_project/: SKILL.md
.codex/skills/brainstorming/: SKILL.md  scripts
.codex/skills/create_mle_agent_package/: SKILL.md
.codex/skills/executing-plans/: SKILL.md
.codex/skills/generate_e2e_tests/: SKILL.md
.codex/skills/generate_migration_plan/: SKILL.md
.codex/skills/refactor_to_clean_architecture/: SKILL.md
.codex/skills/retrospective/: SKILL.md
.codex/skills/subagent-driven-development/: implementer-prompt.md
.codex/skills/writing-plans/: SKILL.md
.github/: architecture.md  automation.md  copilot-instructions.md  domain-boundaries.md  orchestration.md  portability.md  sdlc.md  standards.md
.github/ISSUE_TEMPLATE/: harness-improvement.yml
.github/agents/: README.md  documenter.md  implementer.md  orchestrator.md  planner.md  reviewer.md  tester.md
.github/skills/: README.md  bootstrap_project.md  brainstorm_quick.md  plan_and_execute_feature.md  research_current_info.md  retrospective.md  verify_changes.md
.github/workflows/: docs-quality-guardrails.yml  release-check.yml
.opencode/agent/: documenter.md  implementer.md  orchestrator.md  planner.md  reviewer.md  tester.md
.opencode/agents/: documenter.md  implementer.md  orchestrator.md  planner.md  reviewer.md  tester.md
.opencode/plugin/: verify-gate.ts
.opencode/skills/brainstorm_quick/: SKILL.md
.opencode/skills/brainstorming/: spec-document-reviewer-prompt.md
.opencode/skills/create_repository_interface/: SKILL.md
.opencode/skills/create_use_case/: SKILL.md
.opencode/skills/execute_engineering_task/: SKILL.md
.opencode/skills/finishing-a-development-branch/: SKILL.md
.opencode/skills/generate_implementation_docs/: SKILL.md
.opencode/skills/plan_and_execute_feature/: SKILL.md
.opencode/skills/requesting-code-review/: SKILL.md
.opencode/skills/research_current_info/: SKILL.md
.opencode/skills/subagent-driven-development/: SKILL.md  spec-reviewer-prompt.md
.opencode/skills/ui-ux-pro-max/: SKILL.md
adapters/: registry.toml
adapters/templates/: _skills_block.j2  agents.md.j2
docs/: agentic-scoring.md  agentic-workflow.md  claude-toolbelt.md  harness-architecture.md  harness-engineering.md  harness-release-lifecycle.md  local-model-runtime-config.md  open-source-readiness.md  opencode-workflow.md  project-init.md  skills-management.md  task-sizing.md  template-sync.md  updating-existing-projects.md  vibe-coding-tetris-example.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  README.md
make/: harness.mk
memory/: README.md  context.md  learnings.md  patterns.md
schemas/: harness-release-v1.schema.json
scripts/: harness_release.py  init_project.py  template_sync.py  toolbelt_doctor.py
tests/harness_release/: test_harness_release.py
tests/init_project/: test_init_project.py
tests/skills_sync/: conftest.py  test_agents.py  test_cli_integration.py  test_config.py  test_discovery.py  test_hashing.py  test_linker.py  test_lockfile.py  test_renderer.py
tests/toolbelt/: test_toolbelt_doctor.py
(+20 files in other folders)
